<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bootroom</string>
    <string name="action_settings">Settings</string>
    <string name="action_clear_events">Delete All Events!</string>
    <string name="action_export_events">Export Game Events</string>
    <string name="action_export_beams">Export the Beams</string>
    <string name="action_export_game">Export Game</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_key_pass">Key</string>
    <string name="menu_substitution">Substitution -></string>
    <string name="menu_tackle">Tackle</string>
    <string name="menu_gk_menu">GK -></string>
    <string name="menu_gk_save">Save</string>
    <string name="menu_gk_punt_successful">Punt Successful</string>
    <string name="menu_gk_punt_unsuccessful">Punt Unsuccessful</string>
    <string name="menu_gk_goal_kick_successful">Goal Kick Successful</string>
    <string name="menu_gk_goal_kick_unsuccessful">Goal Kick Unsuccessful</string>
    <string name="menu_gk_collect_successful">Collect Successful</string>
    <string name="menu_gk_collect_unsuccessful">Collect Unsuccessful</string>
    <string name="menu_gk_conceded">Conceded</string>
    <string name="menu_disciplinary">Disciplinary -></string>
    <string name="menu_foul">Foul</string>
    <string name="menu_yellow_card">Yellow Card</string>
    <string name="menu_red_card">Red Card</string>
    <string name="menu_swap">Swap -></string>
    <string name="menu_interception_positioning">Interception (Positioning)</string>
    <string name="menu_interception_anticipation">Interception (Anticipation)</string>
    <string name="menu_clearance">Clearance</string>
    <string name="menu_dribble">Dribble</string>
    <string name="menu_fouled">Fouled</string>
    <string name="menu_dispossesed">Dispossesed</string>
    <string name="menu_offsides">Offsides</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="gk_button">GK</string>
    <string name="lw_button">LW</string>
    <string name="rw_button">RW</string>
    <string name="rcm_button">CM</string>
    <string name="lcm_button">CM</string>
    <string name="lb_button">LB</string>
    <string name="rb_button">RB</string>
    <string name="rcb_button">CB</string>
    <string name="lcb_button">CB</string>
    <string name="cf_button">CF</string>
    <string name="st_button">ST</string>

</resources>
